--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ delete this test directory.
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.3"
+serde = { version = "1.0.123", features = ["derive"] }
+serde_json = "1.0.63"
+serde_yaml = "0.8.17"
