--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rfs_tester"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
 edition = "2018"
 repository = "https://github.com/greyshaman/rfs_tester"
@@ -12,7 +12,7 @@ license = "MIT"
 license-file = "LICENSE"
 description = """
 This package allows you to prepare a temporary directory for testing, 
-conduct testing related to file operations and after testing is completed, 
+conduct testing related to file operations and after tests are completed, 
 delete this test directory.
 """
 
