--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rfs_tester"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
 edition = "2018"
 repository = "https://github.com/greyshaman/rfs_tester"
@@ -10,15 +10,15 @@ categories = ["filesystem"]
 readme = "README.md"
 license = "MIT"
 description = """
-This package allows you to prepare a temporary directory for testing, 
-conduct testing related to file operations and after tests are completed, 
-delete this test directory.
+This package allows you to create a temporary directory for testing purposes.
+You can use it to perform tests related to file operations.
+After the tests are finished, the temporary directory will be deleted automatically.
 """
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.3"
-serde = { version = "1.0.123", features = ["derive"] }
-serde_json = "1.0.63"
-serde_yaml = "0.8.17"
+rand = "^0.8.5"
+serde = { version = "^1.0.217", features = ["derive"] }
+serde_json = "^1.0.135"
+serde_yaml = "^0.9.34"
