--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rfs_tester"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
 edition = "2021"
 repository = "https://github.com/greyshaman/rfs_tester"
@@ -18,7 +18,7 @@ After the tests are finished, the temporary directory will be deleted automatica
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rfs_test_macro = { version = "1.0.0", path = "./rfs_test_macro" }
+rfs_test_macro = "1.0"
 rand = "^0.8.5"
 serde = { version = "^1.0.217", features = ["derive"] }
 serde_json = "^1.0.136"
