--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 repository = "https://github.com/greyshaman/rfs_tester"
 homepage = "https://github.com/greyshaman/rfs_tester"
 keywords = ["test", "file", "directory"]
-categories = ["filesystem", "testing"]
+categories = ["filesystem", "development-tools::testing"]
 readme = "README.md"
 license = "MIT"
 description = """
