--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "rfs_tester"
-version = "0.3.2"
+version = "0.4.0"
 authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
 edition = "2021"
 repository = "https://github.com/greyshaman/rfs_tester"
 homepage = "https://github.com/greyshaman/rfs_tester"
-keywords = ["test", "file", "directory"]
+keywords = ["test", "file", "directory", "sandbox"]
 categories = ["filesystem", "development-tools::testing"]
 readme = "README.md"
 license = "MIT"
@@ -18,8 +18,8 @@ After the tests are finished, the temporary directory will be deleted automatica
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rfs_test_macro = "1.0"
+rfs_test_macro = "1.1.0"
 rand = "^0.8.5"
 serde = { version = "^1.0.217", features = ["derive"] }
-serde_json = "^1.0.136"
+serde_json = "^1.0.137"
 serde_yaml = "^0.9.34"
