--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rfs_tester"
-version = "1.0.0"
+version = "1.1.0"
 authors = ["Sergey Reshetnikov <shaman@simmirra.com>"]
 edition = "2021"
 repository = "https://github.com/greyshaman/rfs_tester"
@@ -18,10 +18,10 @@ After the tests are finished, the temporary directory will be deleted automatica
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rfs_test_macro = "^1.1.1"
-rand = "^0.9.0"
-serde = { version = "^1.0.217", features = ["derive"] }
-serde_json = "^1.0.137"
-serde_yaml = "^0.9.34"
-tokio = { version = "^1.43.0", features = ["full"] }
-futures = "^0.3.31"
+rfs_test_macro = "1.1.1"
+rand = "0.9.0"
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.139"
+serde_yaml = "0.9.34"
+tokio = { version = "1.43.0", features = ["full"] }
+futures = "0.3.31"
